cm4all-workshop (4.0.1) unstable; urgency=low

  * require PostgreSQL 9.6 or later
  * fix "std::bad_alloc" error after database connection loss
  * workshop: add column `time_started`

 --   

cm4all-workshop (3.3) unstable; urgency=low

  * 

 --   

cm4all-workshop (3.2) unstable; urgency=low

  * workshop: fill `log` column after `again`

 -- Max Kellermann <mk@cm4all.com>  Thu, 25 Oct 2018 20:02:04 +0200

cm4all-workshop (3.1) unstable; urgency=low

  * feature freeze
  * cron: log more context for "No uid/gid specified"

 -- Max Kellermann <mk@cm4all.com>  Fri, 19 Oct 2018 18:30:16 +0200

cm4all-workshop (3.0.6) unstable; urgency=low

  * cron: fix error "std::bad_alloc" due to uninitialized variable
  * cron: fix warning "... died from signal 31"

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Oct 2018 17:02:09 +0200

cm4all-workshop (3.0.5) unstable; urgency=low

  * cron: fix assertion failure
  * cron: fix stack-use-after-scope

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Oct 2018 14:47:33 +0200

cm4all-workshop (3.0.4) unstable; urgency=low

  * eliminate dependency on libevent
  * add "-dev" package with command-line tool "cm4all-workshop-run-job"
  * spawn: add fallback PATH
  * spawn: fix error "Failed to create systemd scope: Unit X not loaded"
  * debian: add missing build-dependency on GTest

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Oct 2018 14:20:06 +0200

cm4all-workshop (3.0.3) unstable; urgency=low

  * config: allow host name in "pond_server" setting
  * systemd: depend on network-online.target

 -- Max Kellermann <mk@cm4all.com>  Fri, 01 Jun 2018 12:21:55 -0000

cm4all-workshop (3.0.2) unstable; urgency=low

  * pond: fix CRC errors due to stack corruption

 -- Max Kellermann <mk@cm4all.com>  Mon, 14 May 2018 14:48:15 -0000

cm4all-workshop (3.0.1) unstable; urgency=low

  * cron: setting "pond_server" sends job log messages to Pond server

 -- Max Kellermann <mk@cm4all.com>  Fri, 11 May 2018 17:55:54 -0000
