@@ -188,6 +188,7 @@ executable('cm4all-workshop',
   'src/workshop/PlanLoader.cxx',
   'src/workshop/PlanLibrary.cxx',
   'src/workshop/PlanUpdate.cxx',
+  'src/workshop/RateLimit.cxx',
   'src/workshop/MultiLibrary.cxx',
   'src/workshop/ProgressReader.cxx',
   'src/workshop/LogBridge.cxx',
