@@ -169,6 +169,8 @@ PlanLoader::ParseLine(FileLineParser &line)
 	} else if (strcmp(key, "concurrency") == 0) {
 		plan.concurrency = line.NextPositiveInteger();
 		line.ExpectEnd();
+	} else if (strcmp(key, "rate_limit") == 0) {
+		plan.rate_limit = RateLimit::Parse(line.ExpectValueAndEnd());
 	} else
 		throw FormatRuntimeError("unknown option '%s'", key);
 }
