@@ -30,68 +30,30 @@
  * OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef WORKSHOP_PLAN_HXX
-#define WORKSHOP_PLAN_HXX
+#pragma once
 
-#include "RateLimit.hxx"
-#include "spawn/ResourceLimits.hxx"
-
-#include <string>
-#include <list>
-#include <vector>
 #include <chrono>
 
-#include <assert.h>
-#include <sys/types.h>
-#include <stdlib.h>
+struct RateLimit {
+	using Duration = std::chrono::seconds;
 
-class Error;
+	/**
+	 * The interval in which the number of occurrences is counted.
+	 */
+	Duration duration{};
 
-/** a plan describes how to perform a specific job */
-struct Plan {
-	std::list<std::string> args;
+	/**
+	 * The maximum number of occurrences of the described event
+	 * within the given interval.
+	 */
+	unsigned max_count = 0;
 
-	std::string timeout, chroot;
-
-	std::chrono::steady_clock::duration parsed_timeout{};
-
-	RateLimit rate_limit;
-
-	uid_t uid = 65534;
-	gid_t gid = 65534;
-
-	/** supplementary group ids */
-	std::vector<gid_t> groups;
-
-	int umask = -1;
-
-	ResourceLimits rlimits;
-
-	int priority = 10;
-
-	/** maximum concurrency for this plan */
-	unsigned concurrency = 0;
-
-	bool sched_idle = false, ioprio_idle = false;
-
-	bool private_network = false;
-
-	bool control_channel = false;
-
-	Plan() = default;
-
-	Plan(Plan &&) = default;
-
-	Plan(const Plan &other) = delete;
-
-	Plan &operator=(Plan &&other) = default;
-	Plan &operator=(const Plan &other) = delete;
-
-	const std::string &GetExecutablePath() const {
-		assert(!args.empty());
-
-		return args.front();
+	bool IsDefined() const noexcept {
+		return duration > Duration{};
 	}
-};
 
-#endif
+	/**
+	 * Throws on error.
+	 */
+	static RateLimit Parse(const char *s);
+};
